--- a/src/components/NicknameInput.css
+++ b/src/components/NicknameInput.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
 .nickname-screen {
   width: 100vw;
   height: 100vh;
@@ -11,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'RoundedFixedsys', cursive;
   image-rendering: pixelated;
 }
 
@@ -79,7 +77,7 @@
 .pixel-input {
   width: 100%;
   padding: 16px;
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'RoundedFixedsys', cursive;
   font-size: 16px;
   background: white;
   border: none;
@@ -141,7 +139,7 @@
 }
 
 .pixel-button {
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'RoundedFixedsys', cursive;
   font-size: 16px;
   padding: 16px 40px;
   background: #3498DB;
