--- a/src/components/UserInterface.css
+++ b/src/components/UserInterface.css
@@ -40,13 +40,27 @@
 
 .user-stats {
   margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.user-money {
+  color: #FFEB3B;
+  /* Bright Yellow */
+  font-weight: bold;
+  font-size: 1.5rem;
+  -webkit-text-stroke: 1px black;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 .user-stats span:first-child {
-  display: block;
   font-weight: bold;
   color: #333;
-  margin-bottom: 5px;
 }
 
 .user-actions {
